openbank-infra/gitops/components/sdd/namespace.yaml
# SPDX-License-Identifier: Apache-2.0
apiVersion: v1
kind: Namespace
metadata:
  name: sdd
  labels:
    app.kubernetes.io/part-of: openbank
    openbank.io/component: sdd
    openbank.io/plane: app
    pod-security.kubernetes.io/enforce: restricted
    pod-security.kubernetes.io/audit: restricted
    pod-security.kubernetes.io/warn: restricted
